--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -27,7 +27,7 @@ $pink: #f66d9b;
 //$red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
-$green: #74cf74;
+$green: #32cd32;
 $hacker-green: #00ff00;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
