--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10856,7 +10856,7 @@ form .player-search-select {
   }
 
   .private-profile-sidebar-container {
-    width: 100%;
+    max-width: 100%;
   }
 
   .private-profile-sidebar-divider {
