--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -241,7 +241,7 @@
     }
 
     .private-profile-sidebar-container {
-        width: 100%;
+        max-width: 100%;
     }
 
     .private-profile-sidebar-divider {
