--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10430,6 +10430,14 @@ form .player-search-select {
   font-size: 1rem;
 }
 
+.roster-member:hover img {
+  border: 2px solid #4d89ff;
+  border-radius: 50%;
+}
+.roster-member:hover span {
+  color: #4d89ff;
+}
+
 .admin-portal-card {
   width: 18rem;
   height: 26rem;
