--- a/resources/sass/pages/_squads.scss
+++ b/resources/sass/pages/_squads.scss
@@ -15,7 +15,7 @@
 
 .squad-card {
     width: 18rem;
-    //height: 36rem;
+    height: 27rem;
     box-shadow: 0 5px 10px rgba(79, 82, 177, 0.35);
 }
 .squad-card:hover {
