--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,7 +28,7 @@
 @import "components/loaders";
 @import "components/modals";
 
-// Page-specific styles
+// Pages
 @import "pages/admin_portal";
 @import "pages/home";
 @import "pages/login-help";
